--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ __pycache__/
 # Distribution / packaging
 .Python
 env/
-build/
 develop-eggs/
 dist/
 downloads/
@@ -52,3 +51,9 @@ docs/_build/
 
 # PyBuilder
 target/
+
+# media
+iso
+centos7
+*.iso
+*.rpm
